# fbx_objects_depviz

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.adoc  README.md
eachnode/: gen.sh  template.json
examples/: all.dot  all.json  deformers.dot  deformers.json  models.dot  models.json  texture-and-mesh.dot  texture-and-mesh.json
src/: fbx.rs  main.rs
src/fbx/: filter.rs  mod.rs  property.rs  v7400.rs
src/graph/: mod.rs
