[package]
name = "fbx_objects_depviz"
version = "0.1.1"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Utility to visualize dependencies of FBX objects"
repository = "https://github.com/lo48576/fbx_objects_depviz"

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
fbxcel = "0.9.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[badges]
maintenance = { status = "passively-maintained" }
